--- a/index.html
+++ b/index.html
@@ -11,13 +11,11 @@ permalink: /
 <div class="content-wrap">
     <div class="container clearfix">
         <div class="col_full center">
-            <h2 style="line-height: 1.6;">Bienvenido! Esto es <span>Coderic</span> Estamos muy complacidos de que hayas llegado hasta aquí. Queremos trabajar contigo, o trabajar para ti, ofrecerte la tecnologia que conocemos y llevar tus ideas y tus negocios a niveles que muchos no se atreven ni a soñar</h2>
-            <a href="/precios.html" data-scrollto="#pricing-signup" class="simple-button"><i class="icon-tasks"></i>Planes y Tarifas</a>
-            <a href="/portafolios.html" class="simple-button"><i class="icon-briefcase"></i>Portafolios y Clientes</a>
+            <h2 style="line-height: 1.6;">Bienvenido! Esto es <span>Coderic CoWorker</span>. Una Comunidad de trabajo colaborativo dónde podrás intercambiar recursos con Desarrolladores, Empresarios y Compañías emergentes, conseguir financiamiento para tus proyectos, ofrecer tus servicios y mucho más.</h2>
+            <a href="/miembros.html" class="simple-button"><i class="icon-user"></i>Miembros</a>
+            <a href="/empresas.html" class="simple-button"><i class="icon-briefcase"></i>Empresas</a>
         </div>
         <div class="dotted-divider"></div>
-        {%- include promo.html -%}
-        <div class="clear"></div>
         <div class="col_two_third">
             <div class="col_one_third"><div class="product-feature product-feature2"><span class="icon-copy"></span><h3>hghgfhhhs</h3><p>Donec sed odio dui. Nulla vitae elit libero, a pharetra augue. Nullam id dolor id nibh ultricies vehicula ut id elit.</p></div></div>
             <div class="col_one_third"><div class="product-feature product-feature2"><span class="icon-fullscreen"></span><h3>ghfghgfhghe</h3><p>Donec sed odio dui. Nulla vitae elit libero, a pharetra augue. Nullam id dolor id nibh ultricies vehicula ut id elit.</p></div></div>
@@ -57,7 +55,7 @@ permalink: /
         </div>
         <div class="dotted-divider"></div>
         <div class="col_full">
-            <h3>Trabajos de nuestro <span>Portafolios</span></h3>
+            <h3>Muñéstranos tu <span>Trabajo</span></h3>
             <div id="portfolio" class="scroll-portfolio clearfix">
                 <div class="portfolio-item pf-icons pf-media">
                     <div class="portfolio-image">
@@ -376,100 +374,20 @@ permalink: /
             </div>
         </div>
         <div class="dotted-divider"></div-->
-        <div class="col_two_third">
-            <div class="tab_widget nobottommargin" id="tabwidget-1">
-                <ul class="tabs">
-                    <li><a href="#tab-tab1" data-href="#tab-tab1"><i class="icon-star"></i> Nuestra misión</a></li>
-                    <li><a href="#tab-tab2" data-href="#tab-tab2"><i class="icon-question-sign"></i> Obtenga soporte en línea</a></li>
-                    <li><a href="#tab-tab3" data-href="#tab-tab3"><i class="icon-map-marker"></i> Encuéntrenos</a></li>
-                </ul>
-                <div class="tab_container">
-                    <div id="tab-tab1" class="tab_content entry_content clearfix">
-                        <p>Donec sed odio dui. Nulla vitae elit libero, a pharetra augue. Nullam id dolor id nibh ultricies vehicula ut id elit. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Duis mollis, est non commodo luctus.</p>
-                        <div class="col_half nobottommargin">
-                            <ul>
-                                <li class="icon-ok">Atención al Cliente</li>
-                                <li class="icon-ok">Soporte en vivo 24x7</li>
-                                <li class="icon-ok">Control de calidad</li>
-                                <li class="icon-ok">Fácil Documentación</li>
-                            </ul>
-                        </div>
-                        <div class="col_half nobottommargin col_last">
-                            <ul>
-                                <li class="icon-ok">Garantía de Devolución de dinero en 30</li>
-                                <li class="icon-ok">Siempre en línea 99.9% Uptime Garantizado</li>
-                                <li class="icon-ok">No Gimmicks</li>
-                                <li class="icon-ok">Monitoreo continuo</li>
-                            </ul>
-                        </div>
-                        <div class="clear"></div>
-                    </div>
-                    <div id="tab-tab2" class="tab_content entry_content clearfix">
-                        <div class="col_two_fifth"><img src="/assets/coderic/images/slider/sample.jpg" class="notopmargin norightmargin img-polaroid" alt="Image" title="Image" /></div>
-                        <div class="col_three_fifth col_last">
-                            <p>Aenean lacinia bibendum nulla sed consectetur. Cras mattis consectetur purus sit amet fermentum. Donec id elit non mi porta gravida at eget metus. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            <ul class="nobottommargin">
-                                <li class="icon-thumbs-up">Live Support (10 AM to 6 PM)</li>
-                                <li class="icon-thumbs-up">Phone Support (10 AM to 10 PM)</li>
-                                <li class="icon-thumbs-up">Email Support (24x7)</li>
-                                <li class="icon-thumbs-up">Free Forum Access</li>
-                            </ul>
-                        </div>
-                        <div class="clear"></div>
-                    </div>
-                    <div id="tab-tab3" class="tab_content entry_content clearfix">
-                        <div class="col_two_fifth">
-                            <img class="img-polaroid" width="100%" src="https://maps.googleapis.com/maps/api/staticmap?center=Elizabeth+Street,Melbourne,Australia&zoom=14&size=450x350&maptype=roadmap&markers=color:blue%7Clabel:E%7CElizabeth+Street,Melbourne,Australia&sensor=false" alt="Our Office Location" />
-                        </div>
-                        <div class="col_three_fifth col_last">
-                            <p>Corporación Orientada al Desarrollo Estratégico de Recursos de Información Comercial.</p>
-                            <ul class="nobottommargin">
-                                <li class="icon-map-marker">Urb Diego I Calle 1 Casa 20<br /> Valencia, Carabobo</li>
-                                <li class="icon-phone">+58 (0500) 263-3742 / +58 (0500) CODERIC</li>
-                                <li class="icon-envelope-alt">info@coderic.co.ve</li>
-                            </ul>
-                        </div>
-                        <div class="clear"></div>
-                    </div>
-                </div>
-            </div>
-            <script type="text/javascript">
-                jQuery(document).ready(function ($) {
-                    tab_widget('#tabwidget-1');
-                });
-            </script>
-        </div>
-        <div class="col_one_third col_last">
-            <h4>Testimonios</h4>
-            <div class="testimonial-scroller" data-prev="#widget-testimonial-2-prev" data-next="#widget-testimonial-2-next">
-                <div class="testimonials" id="widget-testimonial-2">
-                    <div class="testimonial-item">
-                        <div class="testi-content">Nullam id dolor id nibh ultricies vehicula ut id elit. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Duis mollis, est non commodo luctus.</div>
-                        <div class="testi-author">Collis Ta'eed<span><a href="http://themeforest.net">http://themeforest.net</a></span></div>
-                    </div>
-                    <div class="testimonial-item">
-                        <div class="testi-content">Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Duis mollis, est non commodo luctus.</div>
-                        <div class="testi-author">Cyan Ta'eed<span><a href="http://themeforest.net">http://activeden.net</a></span></div>
-                    </div>
-                </div>
-            </div>
-            <div id="widget-testimonial-2-prev" class="widget-scroll-prev"></div>
-            <div id="widget-testimonial-2-next" class="widget-scroll-next"></div>
-        </div>
-        <div class="clear"></div>
+        
         <div style="position: relative;">
-            <h4>Nuestros <span>Clientes</span></h4>
+            <h4>Empresas <span>Asociadas</span></h4>
             <ul id="clients-scroller" class="our-clients clearfix">
-                <li><a href="http://www.logospire.com/logos/3122"><img src="/assets/coderic/images/clients/3122.jpg" alt="Client 1" title="Client 1" /></a></li>
-                <li><a href="http://www.logospire.com/logos/4044"><img src="/assets/coderic/images/clients/4044.png" alt="Client 2" title="Client 2" /></a></li>
-                <li><a href="http://www.logospire.com/logos/4122"><img src="/assets/coderic/images/clients/4112.jpg" alt="Client 3" title="Client 3" /></a></li>
-                <li><a href="http://www.logospire.com/logos/4147"><img src="/assets/coderic/images/clients/4147.jpg" alt="Client 4" title="Client 4" /></a></li>
-                <li><a href="http://www.logospire.com/logos/4487"><img src="/assets/coderic/images/clients/4487.png" alt="Client 5" title="Client 5" /></a></li>
-                <li><a href="http://www.logospire.com/logos/4999"><img src="/assets/coderic/images/clients/4999.jpg" alt="Client 6" title="Client 6" /></a></li>
-                <li><a href="http://www.logospire.com/logos/5055"><img src="/assets/coderic/images/clients/5055.jpg" alt="Client 7" title="Client 7" /></a></li>
-                <li><a href="http://www.logospire.com/logos/5393"><img src="/assets/coderic/images/clients/5393.jpg" alt="Client 8" title="Client 8" /></a></li>
-                <li><a href="http://www.logospire.com/logos/5909"><img src="/assets/coderic/images/clients/5909.png" alt="Client 7" title="Client 7" /></a></li>
-                <li><a href="http://www.logospire.com/logos/6002"><img src="/assets/coderic/images/clients/6002.png" alt="Client 8" title="Client 8" /></a></li>
+                <li><a href="http://www.logospire.com/logos/3122"><img src="http://www.logospire.com/images/3122.jpg" alt="Client 1" title="Client 1" /></a></li>
+                <li><a href="http://www.logospire.com/logos/4044"><img src="http://www.logospire.com/images/4044.png" alt="Client 2" title="Client 2" /></a></li>
+                <li><a href="http://www.logospire.com/logos/4122"><img src="http://www.logospire.com/images/4112.jpg" alt="Client 3" title="Client 3" /></a></li>
+                <li><a href="http://www.logospire.com/logos/4147"><img src="http://www.logospire.com/images/4147.jpg" alt="Client 4" title="Client 4" /></a></li>
+                <li><a href="http://www.logospire.com/logos/4487"><img src="http://www.logospire.com/images/4487.png" alt="Client 5" title="Client 5" /></a></li>
+                <li><a href="http://www.logospire.com/logos/4999"><img src="http://www.logospire.com/images/4999.jpg" alt="Client 6" title="Client 6" /></a></li>
+                <li><a href="http://www.logospire.com/logos/5055"><img src="http://www.logospire.com/images/5055.jpg" alt="Client 7" title="Client 7" /></a></li>
+                <li><a href="http://www.logospire.com/logos/5393"><img src="http://www.logospire.com/images/5393.jpg" alt="Client 8" title="Client 8" /></a></li>
+                <li><a href="http://www.logospire.com/logos/5909"><img src="http://www.logospire.com/images/5909.png" alt="Client 7" title="Client 7" /></a></li>
+                <li><a href="http://www.logospire.com/logos/6002"><img src="http://www.logospire.com/images/6002.png" alt="Client 8" title="Client 8" /></a></li>
             </ul>
             <div class="widget-scroll-prev" id="ourclients_prev"></div>
             <div class="widget-scroll-next" id="ourclients_next"></div>
