--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@ permalink: /
         </div>
         <div class="dotted-divider"></div>
         <div class="col_two_third">
+            <h3>Ventajas del <span>CoWorking</span></h3>
             <div class="col_one_third"><div class="product-feature product-feature2"><span class="icon-copy"></span><h3>hghgfhhhs</h3><p>Donec sed odio dui. Nulla vitae elit libero, a pharetra augue. Nullam id dolor id nibh ultricies vehicula ut id elit.</p></div></div>
             <div class="col_one_third"><div class="product-feature product-feature2"><span class="icon-fullscreen"></span><h3>ghfghgfhghe</h3><p>Donec sed odio dui. Nulla vitae elit libero, a pharetra augue. Nullam id dolor id nibh ultricies vehicula ut id elit.</p></div></div>
-            <div class="col_one_third col_last"><div class="product-feature product-feature2"><span class="icon-picture"></span><h3>12 Slider Plugins</h3><p>Donec sed odio dui. Nulla vitae elit libero, a pharetra augue. Nullam id dolor id nibh ultricies vehicula ut id elit.</p></div></div>
+            <div class="col_one_third col_last"><div class="product-feature product-feature2"><span class="icon-picture"></span><h3>hfghfghgfhg</h3><p>Donec sed odio dui. Nulla vitae elit libero, a pharetra augue. Nullam id dolor id nibh ultricies vehicula ut id elit.</p></div></div>
             <div class="clear"></div>
             <div class="col_one_third"><div class="product-feature product-feature2"><span class="icon-briefcase"></span><h3>fghghgfhgfh</h3><p>Donec sed odio dui. Nulla vitae elit libero, a pharetra augue. Nullam id dolor id nibh ultricies vehicula ut id elit.</p></div></div>
             <div class="col_one_third"><div class="product-feature product-feature2"><span class="icon-cogs"></span><h3>fghfghgfhgfh</h3><p>Donec sed odio dui. Nulla vitae elit libero, a pharetra augue. Nullam id dolor id nibh ultricies vehicula ut id elit.</p></div></div>
@@ -55,7 +56,7 @@ permalink: /
         </div>
         <div class="dotted-divider"></div>
         <div class="col_full">
-            <h3>Muñéstranos tu <span>Trabajo</span></h3>
+            <h3>Muéstranos tu <span>Trabajo</span></h3>
             <div id="portfolio" class="scroll-portfolio clearfix">
                 <div class="portfolio-item pf-icons pf-media">
                     <div class="portfolio-image">
@@ -374,7 +375,7 @@ permalink: /
             </div>
         </div>
         <div class="dotted-divider"></div-->
-        
+
         <div style="position: relative;">
             <h4>Empresas <span>Asociadas</span></h4>
             <ul id="clients-scroller" class="our-clients clearfix">
