--- a/contactenos.html
+++ b/contactenos.html
@@ -2,6 +2,7 @@
 layout: pagina
 title: Contáctenos
 permalink: /contactenos.html
+canonical_url: https://coderic.co.ve/contactenos.html
 ---
 <div class="col_two_third nobottommargin">
     <div id="contact-form-container">
