--- a/frecuentes.html
+++ b/frecuentes.html
@@ -3,6 +3,7 @@ layout: pagina
 title: Preguntas Frecuentes
 subtitle: Respuestas a las dudas que pueda tener
 permalink: /frecuentes.html
+canonical_url: https://coderic.co.ve/frecuentes.html
 ---
 <div class="postcontent nobottommargin clearfix">
     <ul id="portfolio-filter" class="clearfix">
