--- a/privacidad.html
+++ b/privacidad.html
@@ -3,5 +3,6 @@ layout: pagina
 title: Políticas de Privacidad
 subtitle: Respuestas a las dudas que pueda tener
 permalink: /privacidad.html
+canonical_url: https://coderic.co.ve/privacidad.html
 ---
               
