--- a/frecuentes.html
+++ b/frecuentes.html
@@ -4,6 +4,7 @@ title: Preguntas Frecuentes
 subtitle: Respuestas a las dudas que pueda tener
 permalink: /frecuentes.html
 canonical_url: https://coderic.co.ve/frecuentes.html
+sitemap: false
 ---
 <div class="postcontent nobottommargin clearfix">
     <ul id="portfolio-filter" class="clearfix">
