--- a/terminos.html
+++ b/terminos.html
@@ -3,4 +3,5 @@ layout: pagina
 title: Términos de servicio
 permalink: /terminos.html
 canonical_url: https://coderic.co.ve/terminos.html
+sitemap: false
 ---
