--- a/404.html
+++ b/404.html
@@ -1,7 +1,8 @@
 ---
 layout: default-es
 title: Página no encontrada - Error 404
-permalink: /404
+permalink: /404.html
+sitemap: false
 ---
 <div id="content">
     <div id="page-title">
