--- a/contactenos.html
+++ b/contactenos.html
@@ -3,6 +3,7 @@ layout: pagina
 title: Contáctenos
 permalink: /contactenos.html
 canonical_url: https://coderic.co.ve/contactenos.html
+sitemap: false
 ---
 <div class="col_two_third nobottommargin">
     <div id="contact-form-container">
