--- a/legalidad.html
+++ b/legalidad.html
@@ -3,4 +3,5 @@ layout: pagina
 title: Marco Legal
 permalink: /legalidad.html
 canonical_url: https://coderic.co.ve/legalidad.html
+sitemap: false
 ---
