--- a/recibido.html
+++ b/recibido.html
@@ -2,6 +2,7 @@
 layout: pagina
 title: Gracias por contactarnos
 permalink: /recibido.html
+sitemap: false
 ---
 <div class="error-404">
     <span>Hemos recibido su mensaje..! en breve nos pondremos en contacto con usted</span>404
