--- a/contactenos.html
+++ b/contactenos.html
@@ -2,7 +2,7 @@
 layout: pagina
 title: Contáctenos
 permalink: /contactenos.html
-canonical_url: https://coderic.co.ve/contactenos.html
+canonical_url: https://corporacion.coderic.net/contactenos.html
 sitemap: false
 ---
 <div class="col_two_third nobottommargin">
