--- a/frecuentes.html
+++ b/frecuentes.html
@@ -3,7 +3,7 @@ layout: pagina
 title: Preguntas Frecuentes
 subtitle: Respuestas a las dudas que pueda tener
 permalink: /frecuentes.html
-canonical_url: https://corporacion.coderic.net/frecuentes.html
+canonical_url: https://coderic.org/frecuentes.html
 sitemap: false
 ---
 <div class="postcontent nobottommargin clearfix">
