--- a/legalidad.html
+++ b/legalidad.html
@@ -2,6 +2,6 @@
 layout: pagina
 title: Marco Legal
 permalink: /legalidad.html
-canonical_url: https://corporacion.coderic.net/legalidad.html
+canonical_url: https://coderic.org/legalidad.html
 sitemap: false
 ---
