--- a/privacidad.html
+++ b/privacidad.html
@@ -3,7 +3,7 @@ layout: pagina
 title: Políticas de Privacidad
 subtitle: Respuestas a las dudas que pueda tener
 permalink: /privacidad.html
-canonical_url: https://corporacion.coderic.net/privacidad.html
+canonical_url: https://coderic.org/privacidad.html
 sitemap: false
 ---
               
