--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ permalink: /
 ---
 <div id="slider" style="height: auto;">
     <div class="container clearfix">
-        <img src="https://corporacion.coderic.net/assets/coderic/images/slider/1.jpg" alt="Slider 1" />
+        <img src="https://coderic.org/assets/coderic/images/slider/1.jpg" alt="Slider 1" />
     </div>
 </div>
 <div class="content-wrap">
@@ -60,9 +60,9 @@ permalink: /
             <div id="portfolio" class="scroll-portfolio clearfix">
                 <div class="portfolio-item pf-icons pf-media">
                     <div class="portfolio-image">
-                        <a href="https://corporacion.coderic.net/assets/coderic/images/portfolio/full/1.jpg"><img src="https://corporacion.coderic.net/assets/coderic/images/portfolio/4/1.jpg" alt="Cloud Icon" /></a>
-                        <a class="hidden" href="https://corporacion.coderic.net/assets/coderic/images/portfolio/full/1-2.jpg" rel="prettyPhoto[gal1]"></a>
-                        <a class="hidden" href="https://corporacion.coderic.net/assets/coderic/images/portfolio/full/1-3.jpg" rel="prettyPhoto[gal1]"></a>
+                        <a href="https://coderic.org/assets/coderic/images/portfolio/full/1.jpg"><img src="https://coderic.org/assets/coderic/images/portfolio/4/1.jpg" alt="Cloud Icon" /></a>
+                        <a class="hidden" href="https://coderic.org/assets/coderic/images/portfolio/full/1-2.jpg" rel="prettyPhoto[gal1]"></a>
+                        <a class="hidden" href="https://coderic.org/assets/coderic/images/portfolio/full/1-3.jpg" rel="prettyPhoto[gal1]"></a>
                         <div class="portfolio-overlay">
                             <div class="portfolio-overlay-wrap">
                                 <p>Sed ut perspiciatis unde omnis iste natus voluptatem fringilla tempor dignissim at, pretium et arcu.</p>
@@ -70,7 +70,7 @@ permalink: /
                                 <a href="#">Icons</a> &middot; <a href="#">Media</a>
                             </div>
                             <div class="p-overlay-icons clearfix">
-                                <a href="https://corporacion.coderic.net/assets/coderic/images/portfolio/full/1.jpg" class="p-o-gallery" rel="prettyPhoto[gal1]"></a>
+                                <a href="https://coderic.org/assets/coderic/images/portfolio/full/1.jpg" class="p-o-gallery" rel="prettyPhoto[gal1]"></a>
                                 <a href="/portafolios.html" class="p-o-link"></a>
                             </div>
                         </div>
@@ -81,7 +81,7 @@ permalink: /
                 </div>
                 <div class="portfolio-item pf-uielements">
                     <div class="portfolio-image">
-                        <a href="#"><img src="https://corporacion.coderic.net/assets/coderic/images/portfolio/4/2.jpg" alt="Grey UI Kit" title="Grey UI Kit" /></a>
+                        <a href="#"><img src="https://coderic.org/assets/coderic/images/portfolio/4/2.jpg" alt="Grey UI Kit" title="Grey UI Kit" /></a>
                         <div class="portfolio-overlay">
                             <div class="portfolio-overlay-wrap">
                                 <p>Sed ut perspiciatis unde omnis iste natus voluptatem fringilla tempor dignissim at, pretium et arcu.</p>
@@ -89,7 +89,7 @@ permalink: /
                                 <a href="#">UI Elements</a>
                             </div>
                             <div class="p-overlay-icons clearfix">
-                                <a href="https://corporacion.coderic.net/assets/coderic/images/portfolio/full/2.jpg" class="p-o-image" rel="prettyPhoto"></a>
+                                <a href="https://coderic.org/assets/coderic/images/portfolio/full/2.jpg" class="p-o-image" rel="prettyPhoto"></a>
                                 <a href="portfolio-single.html" class="p-o-link"></a>
                             </div>
                         </div>
@@ -100,8 +100,8 @@ permalink: /
                 </div>
                 <div class="portfolio-item pf-illustrations">
                     <div class="portfolio-image">
-                        <a href="https://corporacion.coderic.net/assets/coderic/images/portfolio/full/3.jpg"><img src="https://corporacion.coderic.net/assets/coderic/images/portfolio/4/3.jpg" alt="Calendar Widget" /></a>
-                        <a class="hidden" href="https://corporacion.coderic.net/assets/coderic/images/portfolio/full/3-2.jpg" rel="prettyPhoto[gal2]"></a>
+                        <a href="https://coderic.org/assets/coderic/images/portfolio/full/3.jpg"><img src="https://coderic.org/assets/coderic/images/portfolio/4/3.jpg" alt="Calendar Widget" /></a>
+                        <a class="hidden" href="https://coderic.org/assets/coderic/images/portfolio/full/3-2.jpg" rel="prettyPhoto[gal2]"></a>
                         <div class="portfolio-overlay">
                             <div class="portfolio-overlay-wrap">
                                 <p>Sed ut perspiciatis unde omnis iste natus voluptatem fringilla tempor dignissim at, pretium et arcu.</p>
@@ -109,7 +109,7 @@ permalink: /
                                 <a href="#">Illustrations</a>
                             </div>
                             <div class="p-overlay-icons clearfix">
-                                <a href="https://corporacion.coderic.net/assets/coderic/images/portfolio/full/3.jpg" class="p-o-gallery" rel="prettyPhoto[gal2]"></a>
+                                <a href="https://coderic.org/assets/coderic/images/portfolio/full/3.jpg" class="p-o-gallery" rel="prettyPhoto[gal2]"></a>
                                 <a href="/portafolios.html" class="p-o-link"></a>
                             </div>
                         </div>
@@ -120,7 +120,7 @@ permalink: /
                 </div>
                 <div class="portfolio-item pf-illustrations pf-graphics">
                     <div class="portfolio-image">
-                        <a href="#"><img src="https://corporacion.coderic.net/assets/coderic/images/portfolio/4/4.jpg" alt="Apple Keyboard" title="Apple Keyboard" /></a>
+                        <a href="#"><img src="https://coderic.org/assets/coderic/images/portfolio/4/4.jpg" alt="Apple Keyboard" title="Apple Keyboard" /></a>
                         <div class="portfolio-overlay">
                             <div class="portfolio-overlay-wrap">
                                 <p>Sed ut perspiciatis unde omnis iste natus voluptatem fringilla tempor dignissim at, pretium et arcu.</p>
@@ -128,7 +128,7 @@ permalink: /
                                 <a href="#">Illustrations</a> &middot; <a href="#">Graphics</a>
                             </div>
                             <div class="p-overlay-icons clearfix">
-                                <a href="https://corporacion.coderic.net/assets/coderic/images/portfolio/full/4.jpg" class="p-o-image" rel="prettyPhoto"></a>
+                                <a href="https://coderic.org/assets/coderic/images/portfolio/full/4.jpg" class="p-o-image" rel="prettyPhoto"></a>
                                 <a href="portfolio-single.html" class="p-o-link"></a>
                             </div>
                         </div>
@@ -139,7 +139,7 @@ permalink: /
                 </div>
                 <div class="portfolio-item pf-uielements">
                     <div class="portfolio-image">
-                        <a href="#"><img src="https://corporacion.coderic.net/assets/coderic/images/portfolio/4/5.jpg" alt="Growl Notification" title="Growl Notification" /></a>
+                        <a href="#"><img src="https://coderic.org/assets/coderic/images/portfolio/4/5.jpg" alt="Growl Notification" title="Growl Notification" /></a>
                         <div class="portfolio-overlay">
                             <div class="portfolio-overlay-wrap">
                                 <p>Sed ut perspiciatis unde omnis iste natus voluptatem fringilla tempor dignissim at, pretium et arcu.</p>
@@ -147,7 +147,7 @@ permalink: /
                                 <a href="#">UI Elements</a>
                             </div>
                             <div class="p-overlay-icons clearfix">
-                                <a href="https://corporacion.coderic.net/assets/coderic/images/portfolio/full/5.jpg" class="p-o-image" rel="prettyPhoto"></a>
+                                <a href="https://coderic.org/assets/coderic/images/portfolio/full/5.jpg" class="p-o-image" rel="prettyPhoto"></a>
                                 <a href="portfolio-single.html" class="p-o-link"></a>
                             </div>
                         </div>
@@ -158,7 +158,7 @@ permalink: /
                 </div>
                 <div class="portfolio-item pf-media pf-illustrations">
                     <div class="portfolio-image">
-                        <a href="#"><img src="https://corporacion.coderic.net/assets/coderic/images/portfolio/4/6.jpg" alt="New Beard Video" title="New Beard Video" /></a>
+                        <a href="#"><img src="https://coderic.org/assets/coderic/images/portfolio/4/6.jpg" alt="New Beard Video" title="New Beard Video" /></a>
                         <div class="portfolio-overlay">
                             <div class="portfolio-overlay-wrap">
                                 <p>Sed ut perspiciatis unde omnis iste natus voluptatem fringilla tempor dignissim at, pretium et arcu.</p>
@@ -177,7 +177,7 @@ permalink: /
                 </div>
                 <div class="portfolio-item pf-icons pf-graphics">
                     <div class="portfolio-image">
-                        <a href="#"><img src="https://corporacion.coderic.net/assets/coderic/images/portfolio/4/7.jpg" alt="Minimal Chalkboard" title="Minimal Chalkboard" /></a>
+                        <a href="#"><img src="https://coderic.org/assets/coderic/images/portfolio/4/7.jpg" alt="Minimal Chalkboard" title="Minimal Chalkboard" /></a>
                         <div class="portfolio-overlay">
                             <div class="portfolio-overlay-wrap">
                                 <p>Sed ut perspiciatis unde omnis iste natus voluptatem fringilla tempor dignissim at, pretium et arcu.</p>
@@ -185,7 +185,7 @@ permalink: /
                                 <a href="#">Icons</a> &middot; <a href="#">Graphics</a>
                             </div>
                             <div class="p-overlay-icons clearfix">
-                                <a href="https://corporacion.coderic.net/assets/coderic/images/portfolio/full/7.jpg" class="p-o-image" rel="prettyPhoto"></a>
+                                <a href="https://coderic.org/assets/coderic/images/portfolio/full/7.jpg" class="p-o-image" rel="prettyPhoto"></a>
                                 <a href="portfolio-single.html" class="p-o-link"></a>
                             </div>
                         </div>
@@ -196,8 +196,8 @@ permalink: /
                 </div>
                 <div class="portfolio-item pf-media">
                     <div class="portfolio-image">
-                        <a href="https://corporacion.coderic.net/assets/coderic/images/portfolio/full/8.jpg"><img src="https://corporacion.coderic.net/assets/coderic/images/portfolio/4/8.jpg" alt="Dark Slider" /></a>
-                        <a class="hidden" href="https://corporacion.coderic.net/assets/coderic/images/portfolio/full/8-2.jpg" rel="prettyPhoto[gal3]"></a>
+                        <a href="https://coderic.org/assets/coderic/images/portfolio/full/8.jpg"><img src="https://coderic.org/assets/coderic/images/portfolio/4/8.jpg" alt="Dark Slider" /></a>
+                        <a class="hidden" href="https://coderic.org/assets/coderic/images/portfolio/full/8-2.jpg" rel="prettyPhoto[gal3]"></a>
                         <div class="portfolio-overlay">
                             <div class="portfolio-overlay-wrap">
                                 <p>Sed ut perspiciatis unde omnis iste natus voluptatem fringilla tempor dignissim at, pretium et arcu.</p>
@@ -205,7 +205,7 @@ permalink: /
                                 <a href="#">Media</a>
                             </div>
                             <div class="p-overlay-icons clearfix">
-                                <a href="https://corporacion.coderic.net/assets/coderic/images/portfolio/full/8.jpg" class="p-o-gallery" rel="prettyPhoto[gal3]"></a>
+                                <a href="https://coderic.org/assets/coderic/images/portfolio/full/8.jpg" class="p-o-gallery" rel="prettyPhoto[gal3]"></a>
                                 <a href="/portafolios.html" class="p-o-link"></a>
                             </div>
                         </div>
@@ -216,7 +216,7 @@ permalink: /
                 </div>
                 <div class="portfolio-item pf-media pf-uielements">
                     <div class="portfolio-image">
-                        <a href="#"><img src="https://corporacion.coderic.net/assets/coderic/images/portfolio/4/9.jpg" alt="Textured Counter" title="Textured Counter" /></a>
+                        <a href="#"><img src="https://coderic.org/assets/coderic/images/portfolio/4/9.jpg" alt="Textured Counter" title="Textured Counter" /></a>
                         <div class="portfolio-overlay">
                             <div class="portfolio-overlay-wrap">
                                 <p>Sed ut perspiciatis unde omnis iste natus voluptatem fringilla tempor dignissim at, pretium et arcu.</p>
@@ -235,9 +235,9 @@ permalink: /
                 </div>
                 <div class="portfolio-item pf-uielements pf-illustrations">
                     <div class="portfolio-image">
-                        <a href="https://corporacion.coderic.net/assets/coderic/images/portfolio/full/10.jpg"><img src="https://corporacion.coderic.net/assets/coderic/images/portfolio/4/10.jpg" alt="Media Player UI" /></a>
-                        <a class="hidden" href="https://corporacion.coderic.net/assets/coderic/images/portfolio/full/10-2.jpg" rel="prettyPhoto[gal4]"></a>
-                        <a class="hidden" href="https://corporacion.coderic.net/assets/coderic/images/portfolio/full/10-3.jpg" rel="prettyPhoto[gal4]"></a>
+                        <a href="https://coderic.org/assets/coderic/images/portfolio/full/10.jpg"><img src="https://coderic.org/assets/coderic/images/portfolio/4/10.jpg" alt="Media Player UI" /></a>
+                        <a class="hidden" href="https://coderic.org/assets/coderic/images/portfolio/full/10-2.jpg" rel="prettyPhoto[gal4]"></a>
+                        <a class="hidden" href="https://coderic.org/assets/coderic/images/portfolio/full/10-3.jpg" rel="prettyPhoto[gal4]"></a>
                         <div class="portfolio-overlay">
                             <div class="portfolio-overlay-wrap">
                                 <p>Sed ut perspiciatis unde omnis iste natus voluptatem fringilla tempor dignissim at, pretium et arcu.</p>
@@ -245,7 +245,7 @@ permalink: /
                                 <a href="#">UI Elements</a> &middot; <a href="#">Illustrations</a>
                             </div>
                             <div class="p-overlay-icons clearfix">
-                                <a href="https://corporacion.coderic.net/assets/coderic/images/portfolio/full/10.jpg" class="p-o-gallery" rel="prettyPhoto[gal4]"></a>
+                                <a href="https://coderic.org/assets/coderic/images/portfolio/full/10.jpg" class="p-o-gallery" rel="prettyPhoto[gal4]"></a>
                                 <a href="/portafolios.html" class="p-o-link"></a>
                             </div>
                         </div>
@@ -256,7 +256,7 @@ permalink: /
                 </div>
                 <div class="portfolio-item pf-icons pf-media">
                     <div class="portfolio-image">
-                        <a href="#"><img src="https://corporacion.coderic.net/assets/coderic/images/portfolio/4/11.jpg" alt="Twitter Interface" title="Twitter Interface" /></a>
+                        <a href="#"><img src="https://coderic.org/assets/coderic/images/portfolio/4/11.jpg" alt="Twitter Interface" title="Twitter Interface" /></a>
                         <div class="portfolio-overlay">
                             <div class="portfolio-overlay-wrap">
                                 <p>Sed ut perspiciatis unde omnis iste natus voluptatem fringilla tempor dignissim at, pretium et arcu.</p>
@@ -264,7 +264,7 @@ permalink: /
                                 <a href="#">Icons</a> &middot; <a href="#">media</a>
                             </div>
                             <div class="p-overlay-icons clearfix">
-                                <a href="https://corporacion.coderic.net/assets/coderic/images/portfolio/full/11.jpg" class="p-o-image" rel="prettyPhoto"></a>
+                                <a href="https://coderic.org/assets/coderic/images/portfolio/full/11.jpg" class="p-o-image" rel="prettyPhoto"></a>
                                 <a href="portfolio-single.html" class="p-o-link"></a>
                             </div>
                         </div>
@@ -275,8 +275,8 @@ permalink: /
                 </div>
                 <div class="portfolio-item pf-graphics pf-icons">
                     <div class="portfolio-image">
-                        <a href="https://corporacion.coderic.net/assets/coderic/images/portfolio/full/12.jpg"><img src="https://corporacion.coderic.net/assets/coderic/images/portfolio/4/12.jpg" alt="Clipboard Menu" /></a>
-                        <a class="hidden" href="https://corporacion.coderic.net/assets/coderic/images/portfolio/full/12-2.jpg" rel="prettyPhoto[gal5]"></a>
+                        <a href="https://coderic.org/assets/coderic/images/portfolio/full/12.jpg"><img src="https://coderic.org/assets/coderic/images/portfolio/4/12.jpg" alt="Clipboard Menu" /></a>
+                        <a class="hidden" href="https://coderic.org/assets/coderic/images/portfolio/full/12-2.jpg" rel="prettyPhoto[gal5]"></a>
                         <div class="portfolio-overlay">
                             <div class="portfolio-overlay-wrap">
                                 <p>Sed ut perspiciatis unde omnis iste natus voluptatem fringilla tempor dignissim at, pretium et arcu.</p>
@@ -284,7 +284,7 @@ permalink: /
                                 <a href="#">Graphics</a> &middot; <a href="#">Icons</a>
                             </div>
                             <div class="p-overlay-icons clearfix">
-                                <a href="https://corporacion.coderic.net/assets/coderic/images/portfolio/full/12.jpg" class="p-o-gallery" rel="prettyPhoto[gal5]"></a>
+                                <a href="https://coderic.org/assets/coderic/images/portfolio/full/12.jpg" class="p-o-gallery" rel="prettyPhoto[gal5]"></a>
                                 <a href="/portafolios.html" class="p-o-link"></a>
                             </div>
                         </div>
@@ -339,7 +339,7 @@ permalink: /
             <div class="ipost">
                 <div class="col_half nobottommargin">
                     <div class="ipost-image">
-                        <a href="#" class="image_fade"><img src="https://corporacion.coderic.net/assets/coderic/images/blog/small/1.jpg" title="Post 1" alt="Post 1" /></a>
+                        <a href="#" class="image_fade"><img src="https://coderic.org/assets/coderic/images/blog/small/1.jpg" title="Post 1" alt="Post 1" /></a>
                         <div class="post-overlay icon-camera"></div>
                     </div>
                 </div>
