--- a/terminos.html
+++ b/terminos.html
@@ -2,6 +2,6 @@
 layout: pagina
 title: Términos de servicio
 permalink: /terminos.html
-canonical_url: https://corporacion.coderic.net/terminos.html
+canonical_url: https://coderic.org/terminos.html
 sitemap: false
 ---
